# ffmpepy_video_recoder

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/camera_preview/: recording_preview_renderer.h
app/src/main/cpp/common/: CommonTools.h
app/src/main/cpp/livecore/audio_encoder/: audio_encoder.cpp  audio_encoder.h  audio_encoder_adapter.cpp  audio_encoder_adapter.h
app/src/main/cpp/livecore/common/: live_audio_packet_pool.cpp  live_audio_packet_pool.h  live_audio_packet_queue.cpp  live_audio_packet_queue.h  live_packet_pool.cpp  live_packet_pool.h  live_thread.cpp  live_thread.h
app/src/main/cpp/music_decoder/: aac_accompany_deocder.cpp  aac_accompany_deocder.h  accompany_decoder.h  song_decoder_controller.h
app/src/main/cpp/recorder_processor/: record_processor.cpp  record_processor.h
app/src/main/cpp/video_consumer/libaudio_encoder/: audio_process_encoder_adpater.cpp  audio_process_encoder_adpater.h
app/src/main/cpp/video_consumer/libmusic_merger/: music_merger.cpp
app/src/main/cpp/video_encoder/soft_encoder/: soft_encoder_adapter.cpp  (+3 more)
app/src/main/jni/: ChangbaRecordingPreviewScheduler.cpp  MusicDecoder.cpp  VideoStudio.cpp  com_changba_songstudio_recorder_NativeRecordProcessor.h  com_zx_androidffmpegrecoder_songstudio_Videostudio.h  com_zx_androidffmpegrecoder_songstudio_decoder_MusicDecoder.h  com_zx_androidffmpegrecoder_songstudio_recording_camera_preview_ChangbaRecordingPreviewScheduler.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
(+59 files in other folders)
